Update federation docs for multi-cluster networking

--- a/calico-enterprise/multicluster/federation/index.mdx
+++ b/calico-enterprise/multicluster/federation/index.mdx
@@ -3,7 +3,7 @@ description: Steps to configure federation for clusters and cross-cluster servic
 hide_table_of_contents: true
 ---
 
-# Federated endpoint identity and services
+# Federation and multi-cluster networking
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
