Use cluster mesh positioning

--- a/calico-enterprise/multicluster/federation/kubeconfig.mdx
+++ b/calico-enterprise/multicluster/federation/kubeconfig.mdx
@@ -22,7 +22,7 @@ This how to guide uses the following {{prodname}} features:
 
 ### Local and remote clusters
 
-Each cluster in a federation can act as both a local and remote cluster.
+Each cluster in the cluster mesh can act as both a local and remote cluster.
 
 - Local clusters are configured (via RemoteClusterConfiguration) to retrieve endpoint and routing data from remote clusters
 - Remote clusters authorize local clusters to retrieve endpoint and routing data
@@ -39,7 +39,7 @@ The resources synced through this connection enable the local cluster to referen
 RemoteClusterConfiguration creates this connection in one direction. If you want identity-aware policy on both sides (i.e. both clusters) of a connection, or you want {{prodname}} to establish cross-cluster overlay networking, you need to create a RemoteClusterConfiguration for both directions.
 
 ### kubeconfig files
-Each cluster in the federation should have a dedicated kubeconfig file used to connect and authenticate to other clusters in the federation.
+Each cluster in the cluster mesh should have a dedicated kubeconfig file used by other clusters in the mesh connect and authenticate.
 
 
 ## Before you begin
@@ -63,10 +63,10 @@ Federation of workload endpoint identities only has utility when [Pod IP routabi
 {{prodname}} can automatically extend the overlay networking in your clusters to establish pod IP routes across clusters and thus meet the requirement for Pod IP routability. Only VXLAN overlay is supported at this time.
 
 Ensure the following requirements are met:
-- All nodes in the federation can establish connections to each other via their private IP.
+- All nodes in the cluster mesh can establish connections to each other via their private IP.
 - VXLAN must be enabled on participating IP pools in all clusters and their IP pool CIDRs must not overlap.
-- `routeSource` and `vxlan*` FelixConfiguration options must be aligned across clusters, and traffic on the `vxlanPort` must be allowed between nodes in the federation.
-- RemoteClusterConfigurations must be established in both directions for cluster pairs in the federation.
+- `routeSource` and `vxlan*` FelixConfiguration options must be aligned across clusters, and traffic on the `vxlanPort` must be allowed between nodes in the cluster mesh.
+- RemoteClusterConfigurations must be established in both directions for cluster pairs in the cluster mesh.
 - CNI must be Calico.
 
 With these requirements met, multi-cluster networking will be automatically established when RemoteClusterConfigurations are created.
@@ -79,7 +79,7 @@ Alternatively, you can meet the requirement for Pod IP routability by configurin
 
 Create a kubeconfig file, for each cluster, that will be used by other clusters to connect and authenticate themselves.
 
-**For each** cluster in the federation, utilizing an existing kubeconfig with administrative privileges, follow these steps:
+**For each** cluster in the cluster mesh, utilizing an existing kubeconfig with administrative privileges, follow these steps:
 
 1. Create the ServiceAccount used by remote clusters for authentication:
 
@@ -163,7 +163,7 @@ Create a kubeconfig file, for each cluster, that will be used by other clusters 
 ### Create RemoteClusterConfigurations
 We'll now create the RemoteClusterConfigurations that establish synchronization between clusters. This enables remote-identity aware policy, federated services, and can establish multi-cluster networking.
 
-**For each pair** of clusters in the federation (e.g. cluster A and cluster B):
+**For each pair** of clusters in the cluster mesh (e.g. cluster A and cluster B):
 
 1. In cluster A, create a secret that contains the kubeconfig for cluster B:
 
@@ -230,7 +230,7 @@ We'll now create the RemoteClusterConfigurations that establish synchronization 
 1. Repeat the above steps, switching cluster A and cluster B.
 
 
-After completing the above steps for all cluster pairs in the federation, your clusters should now be ready to utilize remote-identity-aware policy and federated services, along with multi-cluster networking if requirements were met.
+After completing the above steps for all cluster pairs in the cluster mesh, your clusters should now be ready to utilize remote-identity-aware policy and federated services, along with multi-cluster networking if requirements were met.
 
 :::note
  This tutorial sets up RemoteClusterConfigurations in both directions. This is required for {{prodname}} to manage multi-cluster networking, and also ensures you can write identity-aware policy on both sides of a cross-cluster connection. Unidirectional connections can be made at your own discretion.
