Address review comments

--- a/calico-enterprise/multicluster/federation/kubeconfig.mdx
+++ b/calico-enterprise/multicluster/federation/kubeconfig.mdx
@@ -6,7 +6,7 @@ description: Configure a local cluster to pull endpoint data from a remote clust
 
 ## Big picture
 
-Create RemoteClusterConfiguration to federate endpoint identities and establish cross-cluster connectivity.
+Configure a cluster to federate endpoint identities and establish cross-cluster connectivity.
 
 ## Value
 
@@ -24,12 +24,12 @@ This how to guide uses the following {{prodname}} features:
 
 Each cluster in the cluster mesh can act as both a local and remote cluster.
 
-- Local clusters are configured (via RemoteClusterConfiguration) to retrieve endpoint and routing data from remote clusters
+- Local clusters are configured to retrieve endpoint and routing data from remote clusters (via RemoteClusterConfiguration)
 - Remote clusters authorize local clusters to retrieve endpoint and routing data
 
 ### Remote endpoint identity and policy
 
-Policy can typically only reference the endpoint identity (e.g. pod labels) of local endpoints. Federated endpoint identity enables local policy rules to reference remote endpoint identities.
+Typically, policy can only reference the endpoint identity (e.g. pod labels) of local endpoints. Federated endpoint identity enables local policy rules to reference remote endpoint identities.
 
 ### RemoteClusterConfiguration
 RemoteClusterConfiguration is the resource that configures a local cluster to sync resources from a remote cluster. It primarily describes how a local cluster establishes that connection to the remote cluster through which resources are synced.
@@ -39,7 +39,7 @@ The resources synced through this connection enable the local cluster to referen
 RemoteClusterConfiguration creates this connection in one direction. If you want identity-aware policy on both sides (i.e. both clusters) of a connection, or you want {{prodname}} to establish cross-cluster overlay networking, you need to create a RemoteClusterConfiguration for both directions.
 
 ### kubeconfig files
-Each cluster in the cluster mesh should have a dedicated kubeconfig file used by other clusters in the mesh connect and authenticate.
+Each cluster in the cluster mesh should have a dedicated kubeconfig file used by other clusters in the mesh to connect and authenticate.
 
 
 ## Before you begin
@@ -57,7 +57,7 @@ Each cluster in the cluster mesh should have a dedicated kubeconfig file used by
 
 
 ### Ensure pod IP routability
-Federation of workload endpoint identities only has utility when [Pod IP routability](./overview#pod-ip-routability) is established between clusters. If your clusters are using a supported overlay networking mode, {{prodname}} can automatically meet this requirement when clusters are connected.
+Federation of workload endpoint identities requires [Pod IP routability](./overview#pod-ip-routability) between clusters. If your clusters are using a supported overlay networking mode, {{prodname}} can automatically meet this requirement when clusters are connected.
 
 #### {{prodname}} multi-cluster networking
 {{prodname}} can automatically extend the overlay networking in your clusters to establish pod IP routes across clusters and thus meet the requirement for Pod IP routability. Only VXLAN overlay is supported at this time.
@@ -167,7 +167,7 @@ We'll now create the RemoteClusterConfigurations that establish synchronization 
 
 1. In cluster A, create a secret that contains the kubeconfig for cluster B:
 
-   Determine the namespace you will create the secret in - this will be the value of `<namespace>` to replace in all steps.
+   Determine the namespace (`<namespace>`) for the secret to replace in all steps.
    The simplest method to create a secret for a remote cluster is to use the `kubectl` command because it correctly encodes the data and formats the file.
    ```bash
    kubectl create secret generic remote-cluster-secret-name -n <namespace> \
