--- a/calico-cloud_versioned_docs/version-3.17/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-3.17/release-notes/index.mdx
@@ -2,13 +2,19 @@
 description: What's new, and why features provide value for upgrading.
 ---
 
-# Release notes
+# Calico Cloud release notes
 
-## Calico Cloud 17.1.0
+## September 11, 2023 (version 17.1.1)
 
-September 5, 2023
+### Bug fixes
 
-### New features
+* We fixed a problem that caused the user interface to crash when a user attempted to edit a policy.
+* Sasha now processes only Container Threat Detection alerts.
+* Sasha now performs better for large volumes of alerts.
+
+## September 5, 2023 (version 17.1.0)
+
+### New features and enhancements
 
 #### Improvements to software versioning for Calico Cloud installations on managed clusters
 
@@ -45,68 +51,70 @@ For more information, see [Security event management](../threat/security-event-m
 
 ### Known issues
 
-* Enabling WAF and Container Threat Detection through the UI is not possible for clusters running Kubernetes v1.27+. Both features can be enabled using kubectl. 
+* Enabling WAF and Container Threat Detection through the UI is not possible for clusters running Kubernetes v1.27+. Both features can be enabled using kubectl.
 
 ### Security updates
 
 * Runtime security upgraded to [golang 1.20.7](https://go.dev/doc/devel/release#go1.20.7), which includes security updates.
 * We rebuilt `cc-operator` and `cc-cni-config-scanner`, which has reduced the number of CVEs.
 
-## Calico Cloud 17.0.0
+## August 21, 2023 (version 17.0.0)
 
-August 21, 2023
+### New features and enhancements
 
-### New policy recommendations engine for namespace isolation
+#### New policy recommendations engine for namespace isolation
 
 {{prodname}} has added a new policy recommendations engine that automatically generates staged policies for namespace isolation within your cluster. [Policy recommendations](../network-policy/recommendations/policy-recommendations).
 
-### Destination-based routing for egress gateways
+#### Destination-based routing for egress gateways
 
 {{prodname}} introduces a new mode for egress gateways that can leverage destination-based routing. Destination-based routing for egress gateways allows operators associated with a destination that is external to a Kubernetes cluster (for example, IP address or CIDR), to a specific egress gateway deployment. [Egress gateways](../networking/egress/egress-gateway-on-prem).
 
-### Support for DNS rules in clusters using NodeLocal DNSCache
+#### Support for DNS rules in clusters using NodeLocal DNSCache
 
 {{prodname}} has added support for DNS rules in clusters using NodeLocal DNSCache. Also related, there is new documentation on using Calico policy to secure DNS traffic within the cluster with NodeLocal DNSCache enabled. [Use NodeLocal DNSCache in your cluster](../networking/configuring/node-local-dns-cache).
 
-### Improved UI for configuring Workload-based Web Application Firewall (WAF)
+#### Improved UI for configuring Workload-based Web Application Firewall (WAF)
 
 {{prodname}} includes updates to the UI that allows you to select which services are enabled for the Workload-based Web Application Firewall. [Web application firewall](../threat/web-application-firewall).
 
-### Wireguard support for AKS and EKS with Calico CNI
+#### Wireguard support for AKS and EKS with Calico CNI
 
 {{prodname}} now offers official support for Wireguard when using Microsoft AKS or Amazon EKS with Calico CNI. This mode of deployment offers performance benefits and a more efficient routing table compared to using cloud provider CNIs.  [Encrypt data in transit](../compliance/encrypt-cluster-pod-traffic).
 
-### Additional custom roles for {{prodname}}
+#### Additional custom roles for {{prodname}}
 
 You can now create custom role-based access controls for two new roles: "Usage Metrics" and "Image Assurance Admin".
 
-### Image Assurance improvements
+#### Image Assurance improvements
 
-- A containerized version of Image Assurance scanner is now available to integrate into your CI/CD platform. See [Image Assurance containerized scanner](https://quay.io/repository/tigera/image-assurance-scanner-cli) to pull the latest image.
-- Substantial UI improvements including a new package-centric view of images
+* A containerized version of Image Assurance scanner is now available to integrate into your CI/CD platform.
+  See [Image Assurance containerized scanner](https://quay.io/repository/tigera/image-assurance-scanner-cli) to pull the latest image.
+* Substantial UI improvements including a new package-centric view of images
 
 ### Known issues
 
-- The canvas on Service Graph may zoom and pan unexpectedly when modifying Views or Layers
-- Dragging tiers to modify their order is currently not working in the UI, though you can still change its order when editing a tier
-- Policy recommendations may generate rules with ports and protocols for intra-namespace traffic. This will be modified in the next patch release to exclude ports and protocols and provide an option to Allow or Pass this traffic.
+* The canvas on Service Graph may zoom and pan unexpectedly when modifying Views or Layers
+* Dragging tiers to modify their order is currently not working in the UI, though you can still change its order when editing a tier
+* Policy recommendations may generate rules with ports and protocols for intra-namespace traffic.
+  This will be modified in the next patch release to exclude ports and protocols and provide an option to Allow or Pass this traffic.
 
 ## June 6, 2023
 
-### In-cluster scanning with Image Assurance
+### New features and enhancements
+
+#### In-cluster scanning with Image Assurance
 
 Calico Cloud now includes the ability to scan and monitor the images running in your Kubernetes clusters for new vulnerabilities.
 In-cluster scanning will scan any new images not previously scanned, and continuously monitor the BOM (Bill of Materials) for running images that have prior scan results.
 
-### New detectors for container threat detection
+#### New detectors for container threat detection
 
 We've added several new detectors for container threat detection.
 These detectors help identify unsanctioned use of network tools, task scheduling, container admin and Docker commands, and much more.
 Calico Cloud now includes over 40 different detectors across each category of the [MITRE ATT&CK Matrix](https://attack.mitre.org/).
 
 ## May 2, 2023
-
-### General improvements and bug fixes
 
 This release includes a number of performance improvements and bug fixes.
 
@@ -118,82 +126,85 @@ Calico Cloud no longer supports installation on RKE or RKE2.
 
 ## April 11, 2023
 
+## New features and enhancements
+
 ### Updates to Managed Clusters
 
 The **Managed Clusters** page has been redesigned to make it easier and more intuitive to search and filter your clusters.
 
-### Egress gateways for AKS and Azure
+#### Egress gateways for AKS and Azure
 
 {{prodname}} adds egress gateway support for Microsoft Azure and AKS. Egress gateways allow you to identify the namespaces associated with egress traffic outside of your cluster. [Egress gateways for AKS and Azure](../networking/egress/egress-gateway-azure).
 
-### UI for workload-based Web Application Firewall (WAF)
+#### UI for workload-based Web Application Firewall (WAF)
 
 {{prodname}} includes a new UI to enable and configure a workload-based Web Application Firewall. For more information, see [Workload-based web application firewall](../threat/web-application-firewall.mdx#enable-waf).
 
-### Application layer policy with Envoy
+#### Application layer policy with Envoy
 
 {{prodname}} now includes support for application layer policy with Envoy, enabling platform operators to define authorization rules in {{prodname}} policies for protocols such as HTTP and gRPC. For more information, see [Application layer policies](../network-policy/application-layer-policies/).
 
-
-### Service Graph performance optimizations
+#### Service Graph performance optimizations
 
 {{prodname}} added several optimizations to improve the performance of Service Graph for clusters with larger numbers of namespaces.
 
-### Improvements to Envoy to accommodate advanced ingress controllers
+#### Improvements to Envoy to accommodate advanced ingress controllers
 
 {{prodname}} improves its Envoy deployment so you can use this feature in clusters with ingress controllers that perform advanced load balancing. For more information, see [Workload-based web application firewall](../threat/web-application-firewall.mdx).
 
-### Improved {{prodname}} component security
+#### Improved {{prodname}} component security
 
 {{prodname}} components were updated with more restrictive access for pods and containers using the Kubernetes security context:
-- Non-root context whenever possible
-- Root context and privilege escalation are used only when necessary
-- Added `drop ALL capabilities` for pod security
-- Enabled `RuntimeDefault` as the default seccomp profile for all workloads
+* Non-root context whenever possible
+* Root context and privilege escalation are used only when necessary
+* Added `drop ALL capabilities` for pod security
+* Enabled `RuntimeDefault` as the default seccomp profile for all workloads
 
 ## February 28, 2023
 
-### Updates
+### New features and enhancements
 
-- Adds Bottlerocket support for Container Threat Detection.
-- Adds support for scanning multiple images with Image Assurance
+* Adds Bottlerocket support for Container Threat Detection.
+* Adds support for scanning multiple images with Image Assurance
 
 ### Bug fixes
 
-- Fixes "Kibana" menu item rename to "Logs".
-- Bug fixes for Container Threat Detection alerts.
+* Fixes "Kibana" menu item rename to "Logs".
+* Bug fixes for Container Threat Detection alerts.
 
 ## February 7, 2023
 
-### New and improved Dashboards
+### New features and enhancements
 
-Calico Cloud includes new and improved Dashboards that enable operators to define cluster- and namespace-scoped dashboards with new modules for policy usage, application layer and DNS metrics, and much more.
+#### New and improved Dashboards
 
-### Configure Threat Feeds in the Calico Cloud UI
+Calico Cloud includes new and improved Dashboards that enable operators to define cluster* and namespace-scoped dashboards with new modules for policy usage, application layer and DNS metrics, and much more.
+
+#### Configure Threat Feeds in the Calico Cloud UI
 
 Calico Cloud includes a new UI that can be used to manage and configure global threat feeds
 
 For more information, see [Detect and alert on anomalies](../threat/security-anomalies.mdx) and [Trace and block suspicious IPs](../threat/suspicious-ips.mdx).
 
-### Namespace-based policy recommendations
+#### Namespace-based policy recommendations
 
 Calico Cloud has improved its policy recommendation engine to add namespace-based recommendations.
 This enables operators to easily implement microsegmentation for namespaces.
 
 For more information, see [Create policy recommendation](../network-policy/recommendations/policy-recommendations.mdx).
 
-### Create custom roles for Calico Cloud users
+#### Create custom roles for Calico Cloud users
 
 Calico Cloud adminstrators can now define granular roles and permissions for users using custom role-based access controls.
 
 For more information, see [Create and assign custom roles](../users/create-and-assign-custom-roles.mdx).
 
-### Egress gateway improvements
+#### Egress gateway improvements
 
 Calico Cloud has improved the probes to check readiness and outbound connectivity of egress gateways.
 Calico Cloud has also rearchitected egress gateway pods to improve security and make use of a temporary init container to set up packet forwarding.
 
-### Image Assurance updates
+#### Image Assurance updates
 
 * CLI Version v1.3.4
 * Calico Cloud supports the Image Assurance CLI scanner versions 1.3.0 and later.
@@ -202,15 +213,17 @@ This size limit has been removed.
 
 ## December 13, 2022
 
-### Search by CVE in Image Assurance
+### New features and enhancements
+
+#### Search by CVE in Image Assurance
 
 Image Assurance reporting features now includes a search and filtering capability that allows you to find list items based on a single CVE ID within any Image Assurance reports.
 
-### Enable and Disable Container Threat Detection in the Calico Cloud UI
+#### Enable and disable Container Threat Detection in the Calico Cloud UI
 
 You can now enable or disable Container Threat Detection within the UI. After enabling the feature, you can review the status of which nodes are being monitored by the feature and which nodes of your cluster are unsupported.
 
-### New Feature: Calico Cloud Service Status Page
+#### New Feature: Calico Cloud Service Status Page
 
 All users can view the status and health of the Calico Cloud service on our new status page: [https://status.calicocloud.io](https://status.calicocloud.io/).
 
@@ -267,8 +280,8 @@ You can also use the CLI scanner offline and on-demand for ad hoc scanning and e
 
 We've made it easier for platform operators to share Image Assurance scan results and runtime views with these export options:
 
-- Export one row per image or one row per image and CVE.
-- Export CSV or JSON files.
+* Export one row per image or one row per image and CVE.
+* Export CSV or JSON files.
 
 To get started see, [Image Assurance](../image-assurance).
 
