--- a/calico-cloud/multicluster/aws.mdx
+++ b/calico-cloud/multicluster/aws.mdx
@@ -2,11 +2,11 @@
 description: A sample configuration of Calico Enterprise federated endpoint identity and federated services for an AWS cluster.
 ---
 
-# Federation example for an AWS cluster
+# Cluster mesh example for clusters in AWS
 
 ## Big picture
 
-A sample configuration for federated endpoint identity and federated services using AWS clusters.
+A sample configuration for cluster mesh using AWS clusters.
 
 ## Tutorial
 
