--- a/calico-cloud/multicluster/index.mdx
+++ b/calico-cloud/multicluster/index.mdx
@@ -3,7 +3,7 @@ description: Calico Cloud features for scaling to production.
 hide_table_of_contents: true
 ---
 
-# Multi-cluster management and federation
+# Federation and multi-cluster networking
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
