Update cluster mesh index description

--- a/calico-cloud/multicluster/index.mdx
+++ b/calico-cloud/multicluster/index.mdx
@@ -1,5 +1,5 @@
 ---
-description: Calico Cloud features for scaling to production.
+description: Steps to configure cluster mesh.
 hide_table_of_contents: true
 ---
 
