--- a/calico-enterprise/multicluster/federation/index.mdx
+++ b/calico-enterprise/multicluster/federation/index.mdx
@@ -1,5 +1,5 @@
 ---
-description: Steps to configure federation for clusters and cross-cluster service discovery.
+description: Steps to configure cluster mesh.
 hide_table_of_contents: true
 ---
 
